# Architectural-Template-Qt-Widgets

./: CMakeLists.txt  README.md  main.cpp  resource.qrc
cmake/: CPackSettings.cmake  TranslationUtils.cmake
debian/: CMakeLists.txt
deploy/: Dockerfile-Qt-6-5  Dockerfile-Qt-6-5-CPack
doc/: README.md
res/languages/: ATQW_en_EN.ts  ATQW_ru_RU.ts
res/styles/: dark-style.css  light-style.css
src/: CMakeLists.txt
src/controller/: CMakeLists.txt  LanguageController.cpp  LoggingController.cpp  ThemeController.cpp
src/controller/include/: LanguageController.h  LoggingController.h  ThemeController.h
src/core/: Application.cpp  CMakeLists.txt
src/core/include/: Application.h
src/page/: AuthenticationPage.cpp  BasePage.cpp  CMakeLists.txt  MainMenuPage.cpp  PageFactory.cpp
src/page/include/: MainMenuPage.h  SettingPage.h
src/page/ui/: SettingPage.ui
src/setting/: ApplicationSettings.cpp  CMakeLists.txt
src/setting/include/: ApplicationSettings.h
src/ui/: CMakeLists.txt
src/ui/navigation/: CMakeLists.txt  Navigator.cpp
src/ui/navigation/include/: AbstractNavigator.h  Navigator.h
src/ui/page/: CMakeLists.txt  MainMenuPage.cpp  Navigator.cpp  SettingPage.cpp
src/ui/page/include/: AuthenticationPage.h  BasePage.h  Navigator.h  PageFactory.h  SettingPage.h
src/ui/page/ui/: AuthenticationPage.ui  MainMenuPage.ui  SettingPage.ui
src/ui/view/: CMakeLists.txt  MainWindow.cpp  SplashScreen.cpp
src/ui/view/include/: MainWindow.h  Navigator.h  SplashScreen.h
src/ui/view/ui/: SplashScreen.ui
src/view/: CMakeLists.txt  MainWindow.cpp  Navigator.cpp
src/view-model/: CMakeLists.txt  LanguageViewModel.cpp  ThemeViewModel.cpp
src/view-model/include/: LanguageViewModel.h  ThemeViewModel.h
src/view/include/: MainWindow.h
src/view/ui/: MainWindow.ui
tests/: CMakeLists.txt  Test_MainWindow.cpp  main.cpp
tests/include/: Test_MainWindow.h
